Add example secret configuration

--- a/backend/config.secret.yaml.example
+++ b/backend/config.secret.yaml.example
@@ -1,7 +1,8 @@
 ---
+# Remove .example, fill out configuration values and use me!
 db:
   password: ""
-  user: "sgrow"
+  user: ""
 auth:
   google:
     clientId: ""
