--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,13 +5,11 @@ services:
     volumes:
       - "./docker/minio:/data/:rw"
     restart: "on-failure"
-    command: server --console-address ":9001"
-    expose:
-     - "9000"
-     - "9001"
-    environment:
-     - MINIO_ROOT_USER: admin 
-     - MINIO_ROOT_PASSWORD: admin
+    command: server --console-address ":9001" /data
+    ports:
+     - 9000:9000
+     - 9001:9001
+#   credentials are 'minioadmin:minioadmin'     
 #    healthcheck:
 #      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
 #      interval: 30s
