Set up docker for UI

--- a/docker/reverse-proxy.conf
+++ b/docker/reverse-proxy.conf
@@ -16,14 +16,14 @@ http {
         # To disable buffering
         proxy_buffering off;
 
-#        location / {
-#            proxy_pass         http://ui:8081;
-#            proxy_redirect     off;
-#            proxy_set_header   Host $host;
-#            proxy_set_header   X-Real-IP $remote_addr;
-#            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-#            proxy_set_header   X-Forwarded-Host $server_name;
-#        }
+        location / {
+            proxy_pass         http://ui:5173;
+            proxy_redirect     off;
+            proxy_set_header   Host $host;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Host $server_name;
+        }
         
         location /s3/ {
             proxy_pass         http://s3:9001;
