--- a/docker/reverse-proxy.conf
+++ b/docker/reverse-proxy.conf
@@ -1,3 +1,5 @@
+# nginx reverse proxy setup for use with docker compose
+#
 
 worker_processes 1;
  
@@ -26,6 +28,8 @@ http {
         }
         
         location /s3/ {
+            # TODO: this doesn't work correctly for some strange reason
+            #       This part is not strictly needed to be honest
             proxy_pass         http://s3:9001;
             rewrite ^/s3(/.*)$ $1 break;
             proxy_set_header   Host $http_host;
