--- a/docker/reverse-proxy.conf
+++ b/docker/reverse-proxy.conf
@@ -1,3 +1,5 @@
+# nginx reverse proxy setup for use with docker compose
+#
 
 worker_processes 1;
  
@@ -16,16 +18,18 @@ http {
         # To disable buffering
         proxy_buffering off;
 
-#        location / {
-#            proxy_pass         http://ui:8081;
-#            proxy_redirect     off;
-#            proxy_set_header   Host $host;
-#            proxy_set_header   X-Real-IP $remote_addr;
-#            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-#            proxy_set_header   X-Forwarded-Host $server_name;
-#        }
+        location / {
+            proxy_pass         http://ui:5173;
+            proxy_redirect     off;
+            proxy_set_header   Host $host;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Host $server_name;
+        }
         
         location /s3/ {
+            # TODO: this doesn't work correctly for some strange reason
+            #       This part is not strictly needed to be honest
             proxy_pass         http://s3:9001;
             rewrite ^/s3(/.*)$ $1 break;
             proxy_set_header   Host $http_host;
