--- a/docker/reverse-proxy.conf
+++ b/docker/reverse-proxy.conf
@@ -43,5 +43,15 @@ http {
             proxy_set_header Connection "";
             chunked_transfer_encoding off;
         }
+
+        location /registry/ {
+            proxy_pass         http://registry-ui:80;
+            rewrite ^/registry(/.*)$ $1 break;
+            proxy_redirect     off;
+            proxy_set_header   Host $host;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Host $server_name;
+        }
     }
 }
