Fix backend action trigger

--- a/.github/workflows/backend-build.yml
+++ b/.github/workflows/backend-build.yml
@@ -4,12 +4,12 @@ on:
     branches:
       - '*'
     paths:
-      - 'ui/**'
+      - 'backend/**'
   pull_request:
     branches:
       - 'main'
     paths:
-      - 'ui/**'
+      - 'backend/**'
 
 jobs:
   build:
