--- a/.github/workflows/backend-build.yml
+++ b/.github/workflows/backend-build.yml
@@ -3,9 +3,13 @@ on:
   push:
     branches:
       - '*'
+    paths:
+      - 'backend/**'
   pull_request:
     branches:
       - 'main'
+    paths:
+      - 'backend/**'
 
 jobs:
   build:
